# mikemehl.com

./: .gitignore  Dockerfile  README.md  captain-definition  deploy.sh  docker-compose.yml  justfile  resume.typ
backend/: Cargo.toml  build.rs  main.go
backend.go/: .multitask1  go.mod  index.html  justfile  main.go
backend.go/components/: main.templ
backend.go/data/: education.go  experience.go  music.go  skills.go
backend.go/templates/: education.html  experience.html  index.html  intro.html  skills.html
backend/components/: main.templ  main_templ.go
backend/data/: music.go
backend/src/: db.rs  main.rs  resume.rs  routes.rs  templates.rs
backend/src/templates/: index.html
backend/static/: keybase.txt
backend/templates/: education.html  experience.html  index.html  interests.html  intro.html  single-page.html  skills.html
data/: resume.json  resume.md  resume.toml  resume.typ  resume.yaml  templ.tex
db/: data.sql  db.sql  schema.sql
deploy/: playbook.yaml
hooks/: post-receive
secret/: references.json
