[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
lazy_static = "1.4.0"
rust-embed = "8.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
